--- a/views/partials/productHover1.hbs
+++ b/views/partials/productHover1.hbs
@@ -35,7 +35,7 @@
 
 							<div class="col-sm-6 col-md-4 col-lg-3 p-b-50">
 								<!-- Block2 -->
-								<div class="block2">
+								<div class="block2" style="background-color: #f3f3f3;">
 									<div class="block2-img wrap-pic-w of-hidden pos-relative block2-label{{tag}}">
 									<img src="/img/product/view/{{img_name}}" alt="IMG-PRODUCT">
 										<div class="block2-overlay trans-0-4">
