--- a/views/pages/home.hbs
+++ b/views/pages/home.hbs
@@ -4,6 +4,7 @@
 
 <!--Place for Product Showcase hover effect-->
 <!--Place for Blog -->
+{{> productShowcase}}
 
 <!--Place for Product Hover -->
 {{> productHover1}}
