--- a/views/partials/productShowcase.hbs
+++ b/views/partials/productShowcase.hbs
@@ -27,12 +27,12 @@
 
 						<div class="ab-t-l sizefull flex-col-c-m p-l-15 p-r-15">
 							<span class="m-text9 p-t-45 fs-20-sm">
-								The Beauty
+								Men's Wallet
 							</span>
 
-							<h3 class="l-text1 fs-35-sm">
-								Lookbook
-							</h3>
+							<!-- <h3 class="l-text1 fs-35-sm">
+
+							</h3> -->
 
 							<a href="#" class="s-text4 hov2 p-t-20 ">
 								View Collection
@@ -41,69 +41,44 @@
 					</div>
 				</div>
 
-				<div class="col-sm-10 col-md-8 col-lg-6 m-l-r-auto p-t-15 p-b-15">
-					<div class="bgwhite hov-img-zoom pos-relative p-b-20per-ssm">
-						<img src="/images/shop-item-09.jpg" alt="IMG-BANNER">
 
-						<div class="ab-t-l sizefull flex-col-c-b p-l-15 p-r-15 p-b-20">
-							<div class="t-center">
-								<a href="product-detail.html" class="dis-block s-text3 p-b-5">
-									Gafas sol Hawkers one
-								</a>
+								<div class=" flex-w col-sm-10 col-md-8 col-lg-6 m-l-r-auto p-t-15 p-b-15 wrap-pic-w">
+									<div class="hov-img-zoom pos-relative">
+										<img src="/images/banner-08.jpg" alt="IMG-BANNER">
 
-								<span class="block2-oldprice m-text7 p-r-5">
-									$29.50
-								</span>
+										<a href="#" class="block4-overlay sizefull ab-t-l trans-0-4">
+											<span class="block4-overlay-heart s-text9 flex-m trans-0-4 p-l-40 p-t-25">
+												<i class="icon_heart_alt fs-20 p-r-12" aria-hidden="true"></i>
+												<span class="p-t-2">39</span>
+											</span>
 
-								<span class="block2-newprice m-text8">
-									$15.90
-								</span>
-							</div>
+											<div class="block4-overlay-txt trans-0-4 p-l-40 p-r-25 p-b-30">
+												<p class="s-text10 m-b-15 h-size1 of-hidden">
+													Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
+												</p>
 
-							<div class="flex-c-m p-t-44 p-t-30-xl">
-								<div class="flex-col-c-m size3 bo1 m-l-5 m-r-5">
-									<span class="m-text10 p-b-1 days">
-										69
-									</span>
+												<span class="s-text9">
+													Photo by @nancyward
+												</span>
+											</div>
+										</a>
 
-									<span class="s-text5">
-										days
-									</span>
+										<div class="ab-t-l sizefull flex-col-c-m p-l-15 p-r-15">
+											<span class="m-text9 p-t-45 fs-20-sm">
+												Men's Wallet
+											</span>
+
+											<h3 class="l-text1 fs-35-sm of-hidden">
+
+											</h3>
+
+											<a href="#" class="s-text4 hov2 p-t-20 ">
+												View Collection
+											</a>
+										</div>
+									</div>
 								</div>
 
-								<div class="flex-col-c-m size3 bo1 m-l-5 m-r-5">
-									<span class="m-text10 p-b-1 hours">
-										04
-									</span>
-
-									<span class="s-text5">
-										hrs
-									</span>
-								</div>
-
-								<div class="flex-col-c-m size3 bo1 m-l-5 m-r-5">
-									<span class="m-text10 p-b-1 minutes">
-										32
-									</span>
-
-									<span class="s-text5">
-										mins
-									</span>
-								</div>
-
-								<div class="flex-col-c-m size3 bo1 m-l-5 m-r-5">
-									<span class="m-text10 p-b-1 seconds">
-										05
-									</span>
-
-									<span class="s-text5">
-										secs
-									</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
