--- a/views/partials/productShowcase.hbs
+++ b/views/partials/productShowcase.hbs
@@ -44,41 +44,33 @@
 
 								<div class=" flex-w col-sm-10 col-md-8 col-lg-6 m-l-r-auto p-t-15 p-b-15 wrap-pic-w">
 									<div class="hov-img-zoom pos-relative">
-										<img src="/images/banner-08.jpg" alt="IMG-BANNER">
-
+										<img src="https://bellroy.imgix.net/cms_images/686/bellroy-brand-homepage-2.jpg?widths=%5B320%2C%20640%2C%20960%2C%201280%2C%201920%5D&auto=format&class=lazyload&fit=max" alt="IMG-BANNER" style="height:428px">
 										<a href="#" class="block4-overlay sizefull ab-t-l trans-0-4">
 											<span class="block4-overlay-heart s-text9 flex-m trans-0-4 p-l-40 p-t-25">
 												<i class="icon_heart_alt fs-20 p-r-12" aria-hidden="true"></i>
 												<span class="p-t-2">39</span>
 											</span>
-
 											<div class="block4-overlay-txt trans-0-4 p-l-40 p-r-25 p-b-30">
 												<p class="s-text10 m-b-15 h-size1 of-hidden">
 													Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus, ac fringilla lacus. Ut sit amet enim orci. Nam eget metus elit.
 												</p>
-
 												<span class="s-text9">
 													Photo by @nancyward
 												</span>
 											</div>
 										</a>
-
 										<div class="ab-t-l sizefull flex-col-c-m p-l-15 p-r-15">
 											<span class="m-text9 p-t-45 fs-20-sm">
 												Men's Wallet
 											</span>
-
 											<h3 class="l-text1 fs-35-sm of-hidden">
-
 											</h3>
-
 											<a href="#" class="s-text4 hov2 p-t-20 ">
 												View Collection
 											</a>
 										</div>
 									</div>
 								</div>
-
 			</div>
 		</div>
 	</section>
